--- a/source/blog/2014-02-09-setup-octoprcess-with-org-mode-by-org-octopress.org
+++ b/source/blog/2014-02-09-setup-octoprcess-with-org-mode-by-org-octopress.org
@@ -2,8 +2,9 @@
 #+DATE: 2014-02-09
 #+SETUPFILE: ~/org-sty/setupfile.org
 #+JEKYLL_LAYOUT: post
-#+JEKYLL_CATEGORIES: 
+#+JEKYLL_CATEGORIES:  [octopress, emacs, org-mode]
 #+JEKYLL_PUBLISHED: true
+#+JEKYLL_COMMENTS: true
 
 * Basic setup ruby and octopress
 ** Install RVM(ruby 1.9.3)
